# ffmpeg_rtsp_mpp

./: CMakeLists.txt  main.cpp  main_bak.bak
firefly_mpplib/: librockchip_mpp.so.1  librockchip_vpu.so.0
mpp_rga/: MppDecode.cpp  MppDecode.h  MppEncoder.cpp  MppEncoder.h
